--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,6 @@
             <p id="author" class="author-text">Eric Schmidt</p>
         </article>
     </main>
-    <script src="index.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 </html>
